Fixed the overflow-x: hidden not working on Chrome

--- a/style.css
+++ b/style.css
@@ -115,9 +115,10 @@ button {
 /* CONTAINER */
 
 .container {
+  position: relative;
   width: 100%;
-  overflow-x: hidden;
   height: fit-content;
+  overflow-x: hidden;
   max-width: 69.4rem;
   display: grid;
   grid-template-columns: repeat(3, 1fr);
@@ -177,7 +178,7 @@ button {
 /* OVERLAY */
 
 .overlay {
-  position: relative;
+  z-index: 9;
   min-height: 100vh;
   min-width: 100vw;
   overflow-x: hidden;
@@ -198,6 +199,7 @@ button {
 }
 
 .menu-mobile {
+  z-index: 10;
   min-height: 100vh;
   width: 15.6rem;
   background-color: var(--offWhite);
